--- a/.config/windows_terminal/settings.json
+++ b/.config/windows_terminal/settings.json
@@ -51,7 +51,11 @@
         {
             "command": "closePane",
             "keys": "alt+x"
-        }
+        },
+        {
+            "command": "togglePaneZoom", 
+            "keys": "alt+z" 
+	}
     ],
     "autoHideWindow": false,
     "centerOnLaunch": true,
